/*
 * Copyright 2018 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package google.example;

option java_multiple_files = true;

message Result {
    int32 an_int = 1;
    string a_string = 2;
    Detail a_detail = 3;
}

message Detail {
    bool useful = 1;
    MoreDetail even_more = 2;
    repeated MoreDetail lots_more = 3;
    map<string, MoreDetail> tons_more = 4;
}

message MoreDetail {
    enum HowMuchMore {
        Some = 0;
        More = 1;
        Lots = 2;
    }
    string very_detailed = 1;
    HowMuchMore level = 2;
}

enum AnEnum {
    ZERO = 0;
    ONE = 1;
}